syntax = "proto3";
package proxy.rpc;
option go_package = "go.f110.dev/heimdallr/pkg/server/rpc";

import "google/protobuf/timestamp.proto";

service Cluster {
    rpc MemberList (RequestMemberList) returns (ResponseMemberList);
    rpc MemberStat (RequestMemberStat) returns (ResponseMemberStat);

    rpc AgentList (RequestAgentList) returns (ResponseAgentList);
}

service Admin {
    rpc Ping(RequestPing) returns (ResponsePong);

    rpc UserList (RequestUserList) returns (ResponseUserList);
    rpc UserAdd (RequestUserAdd) returns (ResponseUserAdd);
    rpc UserEdit (RequestUserEdit) returns (ResponseUserEdit);
    rpc UserDel (RequestUserDel) returns (ResponseUserDel);
    rpc UserGet (RequestUserGet) returns (ResponseUserGet);
    rpc BecomeMaintainer (RequestBecomeMaintainer) returns (ResponseBecomeMaintainer);
    rpc ToggleAdmin (RequestToggleAdmin) returns (ResponseToggleAdmin);
    rpc TokenNew (RequestTokenNew) returns (ResponseTokenNew);

    rpc RoleList (RequestRoleList) returns (ResponseRoleList);
    rpc BackendList (RequestBackendList) returns (ResponseBackendList);
}

service CertificateAuthority {
    rpc GetSignedList (RequestGetSignedList) returns (ResponseGetSignedList);
    rpc NewClientCert (RequestNewClientCert) returns (ResponseNewClientCert);
    rpc NewServerCert (RequestNewServerCert) returns (ResponseNewServerCert);
    rpc Revoke (CARequestRevoke) returns (CAResponseRevoke);
    rpc Get (CARequestGet) returns (CAResponseGet);
    rpc GetRevokedList (RequestGetRevokedList) returns (ResponseGetRevokedList);
    rpc WatchRevokedCert (RequestWatchRevokedCert) returns (stream ResponseWatchRevokedCert);
}

service User {
    rpc GetSSHKey (RequestGetSSHKey) returns (ResponseGetSSHKey);
    rpc SetSSHKey (RequestSetSSHKey) returns (ResponseSetSSHKey);
    rpc GetGPGKey (RequestGetGPGKey) returns (ResponseGetGPGKey);
    rpc SetGPGKey (RequestSetGPGKey) returns (ResponseSetGPGKey);
}

message RequestPing {}

message ResponsePong {}

message RequestMemberList {}

message ResponseMemberList {
    repeated ClusterMember items = 1;
}

message RequestMemberStat {}

message ResponseMemberStat {
    string id = 1;
    int32 user_count = 2;
    int32 token_count = 3;
    repeated string listened_relay_addrs = 4;
}

message RequestAgentList {}

message ResponseAgentList {
    repeated Agent items = 1;
}

message ClusterMember {
    string id = 1;
}

enum UserType {
    NORMAL = 0;
    SERVICE_ACCOUNT = 1;
}

message UserItem {
             string          id             = 1;
    repeated string          roles          = 2;
    repeated string          maintain_roles = 3;
             bool            admin          = 4;
             UserType        type           = 5;
             string          comment        = 6;
    repeated AccessTokenItem tokens         = 7;
             string          login_name     = 8;
             google.protobuf.Timestamp last_login = 9;
}

message AccessTokenItem {
    string name = 1;
    string value = 2;
    string issuer = 3;
    google.protobuf.Timestamp issued_at = 4;
}

message RoleItem {
    string name = 1;
    string title = 2;
    string description = 3;
    bool system = 4;
    repeated string backends = 5;
}

message BackendItem {
    string name = 1;
    string fqdn = 2;
    repeated HTTPBackend http_backends = 3;
    SocketBackend socket_backend = 4;
}

message HTTPBackend {
    string path  = 1;
    bool   agent = 2;
}

message SocketBackend {
    bool agent = 1;
}

message CertItem {
    bytes  serial_number = 1;
    string common_name   = 2;
    google.protobuf.Timestamp issued_at  = 3;
    google.protobuf.Timestamp revoked_at = 4;
    bool   agent       = 5;
    string comment     = 6;
    bytes  certificate = 7;
    bytes  p12         = 8;
    bool   has_p12     = 9;
    bool   device      = 10;
}

message Agent {
    string name = 1;
    string from_addr = 2;
    google.protobuf.Timestamp connected_at = 3;
}

message RequestUserList {
    string role = 1;
    bool service_account = 2;
}

message ResponseUserList {
    repeated UserItem items = 1;
}

message RequestUserAdd {
    string id = 1;
    string role = 2;
    UserType type = 3;
    string comment = 4;
}

message ResponseUserAdd {
    bool ok = 1;
}

message RequestUserEdit {
    string id = 1;
    UserItem user = 2;
}

message ResponseUserEdit {
    bool ok = 1;
}

message RequestUserDel {
    string id = 1;
    string role = 2;
}

message ResponseUserDel {
    bool ok = 1;
}

message RequestUserGet {
    string id = 1;
    bool with_tokens = 2;
}

message ResponseUserGet {
    UserItem user = 1;
    bool ok = 2;
}

message RequestBecomeMaintainer {
    string id = 1;
    string role = 2;
}

message ResponseBecomeMaintainer {
    bool ok = 1;
}

message RequestToggleAdmin {
    string id = 1;
}

message ResponseToggleAdmin {
    bool ok = 1;
}

message RequestTokenNew {
    string user_id = 1;
    string name = 2;
}

message ResponseTokenNew {
    AccessTokenItem item = 1;
}

message RequestRoleList {}

message ResponseRoleList {
    repeated RoleItem items = 1;
}

message RequestBackendList {
    bool agent = 1;
}

message ResponseBackendList {
    repeated BackendItem items = 1;
}

message RequestGetSignedList {
    string common_name = 1;
    bool   device      = 2;
}

message ResponseGetSignedList {
    repeated CertItem items = 1;
}

message RequestNewClientCert {
    string common_name          = 1;
    string password             = 2;
    string comment              = 3;
    bool   agent                = 4;
    string csr                  = 5;
    string key_type             = 6;
    int32  key_bits             = 7;
    string override_common_name = 8;
    bool   device               = 9;
}

message ResponseNewClientCert {
    bool ok = 1;
    CertItem certificate = 2;
}

message CARequestRevoke {
    bytes serial_number = 1;
}

message CAResponseRevoke {
    bool ok = 1;
}

message CARequestGet {
    bytes serial_number = 1;
}

message CAResponseGet {
    CertItem item = 1;
}

message RequestGetRevokedList {}

message ResponseGetRevokedList {
    repeated CertItem items = 1;
}

message RequestWatchRevokedCert {}

message ResponseWatchRevokedCert {
    repeated CertItem items = 1;
}

message RequestNewServerCert {
    bytes signing_request = 1;
}

message ResponseNewServerCert {
    bytes certificate = 1;
}

message RequestSignRequest {
    string user_id = 1;
}

message ResponseSignResponse {
    string token = 1;
}

message RequestGetPublicKey {}

message ResponseGetPublicKey {
    bytes public_key = 1;
}

message RequestGetSSHKey {
    string user_id = 1;
}

message ResponseGetSSHKey {
    string user_id = 1;
    string key     = 2;
}

message RequestSetSSHKey {
    string key = 1;
}

message ResponseSetSSHKey {
    bool ok = 1;
}

message RequestGetGPGKey {
    string user_id = 1;
}

message ResponseGetGPGKey {
    string user_id = 1;
    string key     = 2;
}

message RequestSetGPGKey {
    string user_id = 1;
    string key     = 2;
}

message ResponseSetGPGKey {
    bool ok = 1;
}

message ErrorUnauthorized {
    string endpoint = 1;
}